# kausora-realsense-ros2-guide

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  package.xml
.github/workflows/: build.yml  ci.yml  docker.yml  lint.yml
config/: d415_config.yaml  d435_config.yaml  d435i_config.yaml  d455_config.yaml  l515_config.yaml  t265_config.yaml
docker/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: 01-prerequisites.md  02-sdk-installation.md  03-ros2-installation.md  04-realsense-ros2-setup.md  05-docker-setup.md  06-camera-configs.md  07-troubleshooting.md
launch/: d415.launch.py  d435.launch.py  d435i.launch.py  d455.launch.py  l515.launch.py  multi_camera.launch.py  t265.launch.py
rviz/: d415.rviz  d435.rviz  d435i.rviz  d455.rviz  l515.rviz  t265.rviz
scripts/: install_ros2_deps.sh  install_sdk.sh  verify_setup.py
